# SlideCarSimulator

./: .gitignore  .gitmodules  README.md  SlideCarSimulator.code-workspace  requirements.txt
Controller/src/: CMakeLists.txt  main.c
Controller/src/Button/: CMakeLists.txt
Controller/src/Button/private/: Button.c  Button.h  Button.plantuml  Button.sim.html  Button_API.c  Button_SM.c
Controller/src/Button/public/: Button_API.h
Controller/src/CommandSender/: CMakeLists.txt
Controller/src/CommandSender/private/: CommandSender.c  CommandSender.h  CommandSender.plantuml  CommandSender.sim.html  CommandSender_API.c  CommandSender_SM.c
Controller/src/CommandSender/public/: CommandSender_API.h
Controller/src/Driver/: CMakeLists.txt
Controller/src/Driver/private/: ButtonDrv.c  MyPrintf.c  TimerDrv.c  UartDrv.c
Controller/src/Driver/public/: ButtonDrv.h  MyPrintf.h  TimerDrv.h  UartDrv.h
Protobuf/: CMakeLists.txt  SlideCarCommand.proto
Protobuf/public/: SlideCarCommand.pb.c  SlideCarCommand.pb.h
Simulator/: main.py
SlideCar/src/: CMakeLists.txt  main.c
SlideCar/src/Driver/private/: UartDrv.c
SlideCar/src/Driver/public/: UartDrv.h
SlideCar/src/Motor/: CMakeLists.txt
SlideCar/src/Motor/private/: Motor.c  Motor.h  Motor.plantuml  Motor.sim.html  Motor_API.c  Motor_SM.c
SlideCar/src/Motor/public/: Motor_API.h
